Major refactoring to transform the project into a multi-module maven project. This will integrating EAPLI modules/libraries.